# AiOne

./: .env.example  AI-CHAT-README.md  AUTO-UPDATE.md  CHANGELOG.md  LICENSE  NOTIFICATION-GUIDE.md  README-ICON.md  README.md  STYLE-SYSTEM.md  generate-icon.sh  package.json  pnpm-lock.yaml  release-with-updater.sh  release.sh  setup-updater-env.sh  tsconfig.json  version.sh  vite.config.ts
.github/: README.md  TROUBLESHOOTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: debug-release.yml  release-signed.yml  release-updater.yml  release.yml  simple-test.yml  test.yml
.vercel/: project.json
src/: App.css  App.tsx  declarations.d.ts
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  lib.rs  main.rs  schemas.rs  settings.rs  utils.rs
src/aiProveder/: ai.ts
src/aimodel/: IAiModel.ts
src/components/: AISettingsModal.tsx  AiChat.css  AiChat.tsx  AppRoutes.tsx  AssistantListItem.tsx  AssistantsList.tsx  CustomTextArea.tsx  CustomTitleBar.css  CustomTitleBar.tsx  CustomTitleBarNew.tsx  Dashboard.tsx  LanguageSwitcher.tsx  NotificationCenter.css  NotificationCenter.tsx  TextArea.tsx  ThemeIntegration.tsx  ThemeSettings.tsx  UpdateManager.tsx  UserManagement.tsx
src/components/assistantlist/: AssistantItems.tsx  Setting.css  Setting.tsx  TopicList.tsx
src/components/chats/: AssistantMessage.css  AssistantMessage.tsx
src/hooks/: useNotificationPosition.ts  useOptimizedWindowState.ts  useThemeManager.ts  useTranslation.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/menus/: AppSider.tsx  menu.ts
src/pages/: Assistants.tsx  DashboardPage.tsx  DatabasePage.tsx  DocumentsPage.tsx  HomePage.tsx  NotificationsPage.tsx  SettingsPage.tsx  UserManagementPage.tsx
src/pages/settings/: AppearancePage.tsx  GeneralPage.tsx  ModelProviderPage.tsx  SettingsPage.tsx  StoragePage.tsx  SystemPage.tsx  UpdatePage.tsx  UpdateSettings.tsx
src/services/: aiChatService.ts  aiConfigManager.ts  openaiService.ts
src/store/: AppStateContext.tsx  AppStateProvider.tsx  assistant.ts  fileStorage.ts  persistentStore.ts  themeApplication.ts
src/styles/: theme.css
src/types/: chat.ts
src/utils/: WindowStateManager.ts
