[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "aione"
version = "0.0.1-beta.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "aione_lib"

[build-dependencies]
tauri-build = {version = "0.0.1-beta.6"] }

[dependencies]
serde = {version = "0.0.1-beta.6"] }
serde_json = "1"
tauri = {version = "0.0.1-beta.6"] }
tauri-plugin-opener = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"
